[PS] Apply correct DTOs, simplify delete impact, modify itemsCount
